--- a/Tex/src/macros.tex
+++ b/Tex/src/macros.tex
@@ -34,14 +34,16 @@
 %---------Evaluation Macros-----------------------%
 \newcommand{\autoTree}{Auto-Tree\xspace}
 \newcommand{\autoTreap}{Auto-Treap\xspace}
+\newcommand{\autoSkiplist}{Auto-Skiplist\xspace}
 \newcommand{\danaTree}{LO-Tree\xspace}
 \newcommand{\danaAVL}{LO-AVL\xspace}
 \newcommand{\bronson}{Snap-Tree\xspace}
-\newcommand{\skiplist}{Skip-List\xspace}
+\newcommand{\skiplist}{J-Skiplist\xspace}
 \newcommand{\globalTree}{Lock-Tree\xspace}
 \newcommand{\globalTreap}{Lock-Treap\xspace}
 \newcommand{\domTree}{Domination-Tree\xspace}
 \newcommand{\domTreap}{Domination-Treap\xspace}
+\newcommand{\domSkiplist}{Lock-Skiplist\xspace}
 \newcommand{\getOP}{\textsc{get}\xspace}
 
 
