--- a/Tex/src/myRef.bib
+++ b/Tex/src/myRef.bib
@@ -329,6 +329,13 @@ howpublished= "\url{http://code.google.com/p/leveldb}"
   isbn      = {0-201-10715-5},
 }
 
+@book{HerlihyS2008,
+ author = {Herlihy, Maurice and Shavit, Nir},
+ title = {The Art of Multiprocessor Programming},
+ year = {2008},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+} 
+
 @article{Eswaran:1976,
  author = {Eswaran, K. P. and Gray, J. N. and Lorie, R. A. and Traiger, I. L.},
  title = {The notions of consistency and predicate locks in a database system},
