--- a/Tex/src/document.tex
+++ b/Tex/src/document.tex
@@ -95,28 +95,28 @@
 \maketitle
 
 \begin{abstract}
-We present an \emph{automatic code transformation} for concurrent data structures, 
-which increases their scalability without sacrificing correctness. 
-Our transformation takes lock-based code, and replaces some of the 
+We present an \emph{automatic code transformation} for concurrent data structures,
+which increases their scalability without sacrificing correctness.
+Our transformation takes lock-based code, and replaces some of the
 locking steps therein with optimistic synchronization, in order to reduce contention. The main idea is to
-have each operation perform an optimistic traversal of the data structure 
+have each operation perform an optimistic traversal of the data structure
 as long as no shared memory locations are updated, and then proceed with
-pessimistic code. The transformed code inherits essential 
+pessimistic code. The transformed code inherits essential
 properties of the original one, including linearizability, serializability,
-and deadlock freedom. 
-%It reduces contention, both on locks and on access to shared memory locations. 
-%When applying our transformation to 
-%hand-over-hand locking solutions, we obtain significantly superior scalability.  
+and deadlock freedom.
+%It reduces contention, both on locks and on access to shared memory locations.
+%When applying our transformation to
+%hand-over-hand locking solutions, we obtain significantly superior scalability.
 
 Our work complements existing pessimistic transformations that make
 sequential code thread-safe by adding locks.
-In essence, we provide a way to optimize such transformations by reducing 
-synchronization bottlenecks (for example, locking the root of a tree), 
-yielding a fully automatic approach to parallelize sequential code efficiently. 
+In essence, we provide a way to optimize such transformations by reducing
+synchronization bottlenecks (for example, locking the root of a tree),
+yielding a fully automatic approach to parallelize sequential code efficiently.
 The resulting code scales well and significantly outperforms
-pessimistic approaches. We further compare our automatically synthesized code to state-of-the-art 
-data structures implemented by experts. 
-We find that its performance is comparable, and sometimes even superior, 
+pessimistic approaches. We further compare our automatically synthesized code to state-of-the-art
+data structures implemented by experts.
+We find that its performance is comparable%, and sometimes even superior,
 to that achieved by the custom-tailored implementations.
 Our work thus shows the promise that automated approaches
 bear for overcoming the difficulty involved in manually
